--- a/test.html
+++ b/test.html
@@ -4,10 +4,48 @@
   <head>
   	<meta charset="utf-8">
   	<title>Title of page</title>
+  	<link href="css/styles.css" rel="stylesheet"
   </head>
 
   <body>
   	<!--To include in body: h1, class, span, div, form with inputs, table -->
+  	<ul class="menu">
+  		<li>Menu
+  			<ul>
+  				<li>Link1</li>
+  				<li>Link2</li>
+  				<li>Link3</li>
+  			</ul>
+  		</li>
+  	</ul>
+
+  	<h1>Title</h1>
+  	<h2>H2 Section</h2>
+  	<h3>H3 Section</h3>
+  	<h4>H4 Section</h4>
+  	<h5>H5 Section</h5>
+  	<h6>H6 Section</h6>
   </body>
+
+  <table>
+  	<thead>
+  		<tr>
+  			<td>head cell1</td>
+  			<td>head cell2</td>
+
+  		</tr>
+  	</thead>
+  	<tbody>
+  		<tr>
+  			<td>body cell1</td>
+  			<td>body cell2</td>
+  		</tr>
+  	</tbody>
+  </table>
+
+  <div class="relative">Outerdiv-Relative
+  	<div class="absolute">Innerdiv-Absolute
+  	</div>
+  </div>
 
 </html>
