--- a/test.html
+++ b/test.html
@@ -9,15 +9,13 @@
 
   <body>
   	<!--To include in body: h1, class, span, div, form with inputs, table -->
-  	<ul class="menu">
-  		<li>Menu
-  			<ul>
-  				<li>Link1</li>
-  				<li>Link2</li>
-  				<li>Link3</li>
-  			</ul>
-  		</li>
-  	</ul>
+  	<nav>
+      <ul class="clearfix">
+        <li><a href="#">Nav1</a></li>
+        <li><a href="#">Nav2</a></li>
+        <li><a href="#">Nav3</a></li>
+      </ul>
+    </nav>
 
   	<h1>Title</h1>
   	<h2>H2 Section</h2>
@@ -43,8 +41,16 @@
   	</tbody>
   </table>
 
+  <div class="box">
+  	<p> Some box </p>
+  	<img src="https://www.google.com/images/nav_logo225.png">
+  	<p> Some more words </p>
+  </div>
+
   <div class="relative">Outerdiv-Relative
-  	<div class="absolute">Innerdiv-Absolute
+  	<div class="absolute1">Mid-div-Abs
+  		<div class="absolute2">Innerdiv-Absolute
+  		</div>
   	</div>
   </div>
 
