--- a/test2.html
+++ b/test2.html
@@ -10,10 +10,16 @@
 
   <body>
   	<!--To include in body: h1, class, span, div, form with inputs, table -->
-  	<div class="header">
+
+    <div class="header">
       <div></div>
       <div></div>
       <div></div>
+    </div>
+    <div class="transforms">
+      <div></div>
+      <div></div>
+    </div>
       <nav class="primary">
         <ul>
           <li><a href="#">Main</a></li>
@@ -21,5 +27,4 @@
           <li><a href="#">Link3</a></li>
         </ul>
       </nav>
-    </div>
   </body>
