added footer buttons

--- a/PF_PROJ/index.html
+++ b/PF_PROJ/index.html
@@ -26,8 +26,8 @@
 			</ul>
 		</div>
 		<ul class="nav navbar-nav navbar-primary">
-            <li>
-              <a href="#" class="Active">Home</a>
+            <li class="active">
+              <a href="#">Home</a>
             </li>
             <li>
               <a href="#">Tasks</a>
@@ -64,7 +64,7 @@
               <li class="list-group-item"><a href="#"><p class="list-group-item-text">All tasks...</p></a></li>
             </ul>
             <div class="card-pf-footer">
-              Create a task
+              <a href="#" class="add" data-toggle="tooltip" data-placement="top" title="" data-original-title="Create a task for any user, role, or group"><span class="pficon pficon-add-circle-o"></span>Create a task</a>
             </div>
           </div>
 				</div>
@@ -87,7 +87,7 @@
       					<li class="list-group-item"><a href="#"><p class="list-group-item-text">All processes...</p></a></li>
               </ul>
             <div class="card-pf-footer">
-              Start a process
+              <a href="#" class="add" data-toggle="tooltip" data-placement="top" title="" data-original-title="There are 4 process types available for you to start"><span class="pficon pficon-add-circle-o"></span>Start a process</a>
             </div>
           </div>
 				</div>
@@ -108,7 +108,7 @@
               <li class="list-group-item"><a href="#"><p class="list-group-item-text">All Projects...</p></a></li>
             </ul>
             <div class="card-pf-footer">
-              New project
+              <a href="#" class="add" data-toggle="tooltip" data-placement="top" title="" data-original-title="Create a new project from scratch or copy a template"><span class="pficon pficon-add-circle-o"></span>New Project</a>
             </div>
           </div>
 				</div>
