working on activity feed components

--- a/PF_PROJ/index.html
+++ b/PF_PROJ/index.html
@@ -21,7 +21,7 @@
 		<div class="collapse navbar-collapse navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-utility">
 				<li>
-          <a href="#">J. Sniezek</a>
+          <a href="#"><span class="pficon pficon-user"></span>&nbsp; J. Sniezek</a>
         </li>
 			</ul>
 		</div>
@@ -153,28 +153,28 @@
 							
   						<div class="element">
   							<div class="element-icon">
-    							Icon
+    							<span class="pficon pficon-user"></span>
                 </div><!-- icon -->
                 <div class="element-body">
-                  <strong>24</strong> desc
+                  <strong>24</strong> users
                 </div><!-- body -->
     				  </div><!-- elenets -->
 
   						<div class="element">
   							<div class="element-icon">
-    							Icon
+    							<span class="pficon pficon-users"></span>
                 </div><!-- icon -->
                 <div class="element-body">
-                  <strong>42</strong> desc
+                  <strong>42</strong> groups
                 </div><!-- body -->
     				  </div><!-- elenets -->
 
   						<div class="element">
   							<div class="element-icon">
-    							Icon
+    							<span class="pficon pficon-project"></span>
                 </div><!-- icon -->
                 <div class="element-body">
-                  <strong>17</strong> desc
+                  <strong>17</strong> projects
                 </div><!-- body -->
     				  </div><!-- elenets -->
 							
@@ -183,9 +183,14 @@
 						<h2 class="card-pf-title">
 							Recent Activity
 						</h2>
-            		</div>
+          </div>
 					<div class="card-pf-body">
+            <p>Today</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut <a href="#" class="link">aliquip ex ea</a> commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Yesterday</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut <a href="#" class="link">aliquip ex ea</a> commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>2 days ago</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut <a href="#" class="link">aliquip ex ea</a> commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 				</div>
 			</div>
