--- a/PF_PROJ/index.html
+++ b/PF_PROJ/index.html
@@ -155,7 +155,7 @@
                   Showing:
                 </div>
               </div>
-  						<div class="circled-icon-indicator">
+  						<div class="circled-icon-indicator" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Click to change who you're following.">
   							<div class="circled-icon">
     							<span class="pficon pficon-user"></span>
                 </div>
@@ -163,7 +163,7 @@
                   <strong>24</strong>Users
                 </div>
     				  </div>
-  						<div class="circled-icon-indicator">
+  						<div class="circled-icon-indicator" data-toggle="tooltip" data-html="true" data-placement="bottom" title="" data-original-title="Mortgage Group<br>Finance Group<br>Administrators<br>Loan Group<br>Money Group<br>Other Group">
   							<div class="circled-icon">
     							<span class="pficon pficon-users"></span>
                 </div><!-- icon -->
@@ -171,7 +171,7 @@
                   <strong>42</strong>Groups
                 </div><!-- body -->
     				  </div><!-- elements -->
-  						<div class="circled-icon-indicator">
+  						<div class="circled-icon-indicator" data-toggle="tooltip" data-html="true" data-placement="bottom" title="" data-original-title="Project 1<br>Project 2<br>Project 3">
   							<div class="circled-icon">
     							<span class="pficon pficon-project"></span>
                 </div><!-- icon -->
