--- a/PF_PROJ/index.html
+++ b/PF_PROJ/index.html
@@ -56,11 +56,10 @@
                 Pending Tasks
               </h2>
             </div>
-            <div class="bpm-homepage-chart">
-              <!-- replace the image for the chart -->
+            <!-- <div class="bpm-homepage-chart">
               <img src="http://placehold.it/350x350?text=chart">
-            </div>
-            <!-- <div id="chart8"></div> -->
+            </div> -->
+            <div id="chart1"></div> <!-- replace the image with the chart -->
             <ul class="list-group card-pf-footer bpm-card-list">
               <li class="list-group-item"><a href="#"><p class="list-group-item-text">Task 1</p></a></li>
               <li class="list-group-item"><a href="#"><p class="list-group-item-text">Task 2</p></a></li>
@@ -84,19 +83,18 @@
   							Active Processes
   						</h2>
   					</div>
-            <div class="bpm-homepage-chart">
-              <!-- replace the image for the chart -->
+            <!-- <div class="bpm-homepage-chart">
               <img src="http://placehold.it/350x350?text=chart">
-            </div>
-            	
-      				<ul class="list-group card-pf-footer bpm-card-list">
-      					<li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 1</p></a></li>
-      					<li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 2</p></a></li>
-      					<li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 3</p></a></li>
-      					<li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 4</p></a></li>
-                <li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 5</p></a></li>
-      					<li class="list-group-item"><a href="#"><p class="list-group-item-text">All processes...</p></a></li>
-              </ul>
+            </div> -->
+            <div id="chart2"></div> <!-- replace the image with the chart -->
+    				<ul class="list-group card-pf-footer bpm-card-list">
+    					<li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 1</p></a></li>
+    					<li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 2</p></a></li>
+    					<li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 3</p></a></li>
+    					<li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 4</p></a></li>
+              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 5</p></a></li>
+    					<li class="list-group-item"><a href="#"><p class="list-group-item-text">All processes...</p></a></li>
+            </ul>
           </div>
           <div class="card-pf-footer">
             <p>
@@ -114,10 +112,10 @@
   							Projects
   						</h2>
   					</div>
-            <div class="bpm-homepage-chart">
-              <!-- replace the image for the chart -->
+            <!-- <div class="bpm-homepage-chart">
               <img src="http://placehold.it/350x350?text=chart">
-            </div>
+            </div> -->
+            <div id="chart3"></div> <!-- replace the image with the chart -->
             <ul class="list-group card-pf-footer bpm-card-list">
               <li class="list-group-item"><a href="#"><p class="list-group-item-text">Project 1</p></a></li>
               <li class="list-group-item"><a href="#"><p class="list-group-item-text">Project 2</p></a></li>
@@ -281,113 +279,48 @@
 	
 
      <script>
-        var chart = c3.generate({
-          axis: {
-            x: {
-              tick: {
-                outer: false
-              }
-            },
-            y: {
-              tick: {
-                outer: false
-              }
-            }
-          },
-          bindto: '#chart',
-          data: {
-            columns: [
-              ['data1', 30, 200, 100, 400, 150, 250],
-              ['data2', 50, 220, 310, 240, 115, 25],
-              ['data3', 70, 100, 390, 295, 170, 220],
-              ['data4', 10, 340, 30, 290, 35, 20],
-              ['data5', 90, 150, 160, 165, 180, 5]
-            ]
-          },
-          grid: {
-            y: {
-              show: true
-            }
-          },
-          point: {
-            r: 4
-          }
-        });
         var chart1 = c3.generate({
-          axis: {
-            x: {
-              tick: {
-                outer: false
-              }
-            },
-            y: {
-              tick: {
-                outer: false
-              }
-            }
-          },
           bindto: '#chart1',
-          color: {
-            pattern: ['#0088ce', '#00659c', '#3f9c35', '#ec7a08', '#cc0000']
-          },
           data: {
+            colors: {
+              "On time": 
+          '#46c8f5',     "At risk": '#f0ab00',
+              Overdue: '#ec7a08'
+            },
             columns: [
-              ['data1', 30, 200, 100, 400, 150, 250],
-              ['data2', 50, 220, 310, 240, 115, 25],
-              ['data3', 70, 100, 390, 295, 170, 220],
-              ['data4', 10, 340, 30, 290, 35, 20],
-              ['data5', 90, 150, 160, 165, 180, 5]
-            ]
+              ['On time', 16],
+              ['At risk', 7],
+              ['Overdue', 1]
+            ],
+            type : 'donut',
+            onclick: function (d, i) { console.log("onclick", d, i); },
+            onmouseover: function (d, i) { console.log("onmouseover", d, i); },
+            onmouseout: function (d, i) { console.log("onmouseout", d, i); }
           },
-          grid: {
-            y: {
-              show: true
-            }
-          },
-          point: {
-            r: 4
+          donut: {
+            title: "24 total"
           }
         });
         var chart2 = c3.generate({
-          axis: {
-            x: {
-              show: false
-            },
-            y: {
-              show: false
-            }
-          },
           bindto: '#chart2',
-          color: {
-            pattern: ['#0088ce', '#00659c', '#3f9c35', '#ec7a08', '#cc0000']
-          },
           data: {
+            colors: {
+              "On time": 
+          '#46c8f5',     Delayed: '#f0ab00',
+              Overdue: '#ec7a08'
+            },
             columns: [
-              ['Less than one year remaining', 10, 14, 12, 20, 31, 27, 44, 36, 52, 55, 62, 68, 69, 88, 74, 88, 91],
+              ['On time', 8],
+              ['Delayed', 3],
+              ['Overdue', 2]
             ],
-            type: 'area'
+            type : 'donut',
+            onclick: function (d, i) { console.log("onclick", d, i); },
+            onmouseover: function (d, i) { console.log("onmouseover", d, i); },
+            onmouseout: function (d, i) { console.log("onmouseout", d, i); }
           },
-          legend: {
-            show: false
-          },
-          point: {
-            r: 1,
-            focus: {
-              expand: {
-                r: 4
-              }
-            }
-          },
-          size: {
-            height: 80
-          },
-          tooltip: {
-            // because a sparkline should only contain a single data column, the tooltip will only work for a single data column
-            contents: function (d, defaultTitleFormat, defaultValueFormat, color) {
-              for (i = 0; i < d.length; i++) {
-                return '<span class="c3-tooltip-sparkline">' + d[i].value + '%' + '</span>'
-              }
-            }
+          donut: {
+            title: "13 total"
           }
         });
         var chart3 = c3.generate({
@@ -405,15 +338,13 @@
           },
           bindto: '#chart3',
           color: {
-            pattern: ['#0088ce', '#00659c', '#3f9c35', '#ec7a08', '#cc0000']
+            pattern: ['#f0ab00', '#92d400', '#46c8f5']
           },
           data: {
             columns: [
-              ['data1', 30, 200, 100, 400, 150, 250],
-              ['data2', 50, 220, 310, 240, 115, 25],
-              ['data3', 70, 100, 390, 295, 170, 220],
-              ['data4', 10, 340, 30, 290, 35, 20],
-              ['data5', 90, 150, 160, 165, 180, 5]
+              ['Project 1', 30, 20, 10, 40, 15, 25],
+              ['Project 2', 50, 22, 31, 24, 11, 25],
+              ['Project 3', 70, 10, 37, 29, 17, 22],
             ],
             type: 'spline'
           },
@@ -424,174 +355,6 @@
           },
           point: {
             r: 4
-          }
-        });
-        var chart4 = c3.generate({
-          axis: {
-            x: {
-              tick: {
-                outer: false
-              }
-            },
-            y: {
-              tick: {
-                outer: false
-              }
-            }
-          },
-          bindto: '#chart4',
-          color: {
-            pattern: ['#0088ce', '#00659c', '#3f9c35', '#ec7a08', '#cc0000']
-          },
-          data: {
-            columns: [
-              ['data1', 300, 350, 300, 0, 0, 0],
-              ['data2', 130, 100, 140, 200, 150, 50]
-            ],
-            types: {
-              data1: 'area-spline',
-              data2: 'area-spline'
-            }
-          },
-          grid: {
-            y: {
-              show: true
-            }
-          },
-          point: {
-            r: 4
-          }
-        });
-        var chart5 = c3.generate({
-          axis: {
-            x: {
-              tick: {
-                outer: false
-              }
-            },
-            y: {
-              tick: {
-                outer: false
-              }
-            }
-          },
-          bindto: '#chart5',
-          color: {
-            pattern: ['#0088ce', '#00659c', '#3f9c35', '#ec7a08', '#cc0000']
-          },
-          data: {
-            columns: [
-              ['data1', 300, 350, 300, 0, 0, 0],
-              ['data2', 130, 100, 140, 200, 150, 50]
-            ],
-            types: {
-              data1: 'area-spline',
-              data2: 'area-spline'
-            },
-            groups: [['data1', 'data2']]
-          },
-          grid: {
-            y: {
-              show: true
-            }
-          },
-          point: {
-            r: 4
-          }
-        });
-        var chart6 = c3.generate({
-          axis: {
-            x: {
-              categories: ['Red', 'Orange', 'Green', 'Blue'],
-              tick: {
-                outer: false
-              },
-              type: 'category'
-            },
-            y: {
-              tick: {
-                outer: false
-              }
-            }
-          },
-          bar: {
-            width: {
-              ratio: 0.5 // this makes bar width 50% of length between ticks
-            }
-          },
-          bindto: '#chart6',
-          color: {
-            pattern: ['#0088ce', '#00659c', '#3f9c35', '#ec7a08', '#cc0000']
-          },
-          data: {
-            columns: [
-              ['data1', 5, 200, 200, 400],
-              ['data2', 130, 100, 20, 200]
-            ],
-            type: 'bar'
-          },
-          grid: {
-            y: {
-              show: true
-            }
-          }
-        });
-        var chart7 = c3.generate({
-          axis: {
-            rotated: true,
-            x: {
-              categories: ['Red', 'Orange', 'Green', 'Blue'],
-              tick: {
-                outer: false
-              },
-              type: 'category'
-            },
-            y: {
-              tick: {
-                outer: false
-              }
-            }
-          },
-          bindto: '#chart7',
-          color: {
-            pattern: ['#0088ce', '#00659c', '#3f9c35', '#ec7a08', '#cc0000']
-          },
-          data: {
-            columns: [
-              ['data1', 5, 200, 200, 400],
-              ['data2', 130, 100, 20, 200]
-            ],
-            groups: [
-              ['data1', 'data2']
-            ],
-            type: 'bar'
-          },
-          grid: {
-            y: {
-              show: true
-            }
-          }
-        });
-        var chart8 = c3.generate({
-          bindto: '#chart8',
-          data: {
-            colors: {
-              Cloud: 
-          '#00659c',     Virtual: '#0088ce',
-              Baremetal: '#969696'
-            },
-            columns: [
-              ['Cloud', 4,828],
-              ['Virtual', 13,258],
-              ['Baremetal', 11,1124]
-            ],
-            type : 'donut',
-            onclick: function (d, i) { console.log("onclick", d, i); },
-            onmouseover: function (d, i) { console.log("onmouseover", d, i); },
-            onmouseout: function (d, i) { console.log("onmouseout", d, i); }
-          },
-          donut: {
-            title: "210 Host"
           }
         });
       </script>	
