created 3 empty state html pages, just mocked up (not quality code)

--- a/PF_PROJ/empty-state-b.html
+++ b/PF_PROJ/empty-state-b.html
@@ -48,7 +48,7 @@
 	<!-- upper segment of page -->
 	<div class="container-fluid container-cards-pf">
 		<div class="row row-cards-pf">
-      <div class="col-sm-3 col-sm-push-3 card-area">
+			<div class="col-sm-6 col-sm-push-3">
         <div class="card-pf">
           <div class="card-pf-body">
           <div class="card-pf-heading">
@@ -73,62 +73,43 @@
               <a href="#" class="add" data-toggle="tooltip" data-placement="top" title="" data-original-title="Create a new project from scratch or copy a template"><span class="pficon pficon-add-circle-o"></span>New Project</a>
             </p>
           </div>
-        </div> <!-- card end -->
-      </div> <!-- card column end -->
-			<div class="col-sm-3 col-sm-push-3 card-area">
-        <div class="card-pf">
-          <div class="card-pf-body">
-            <div class="card-pf-heading">
-              <h2 class="card-pf-title">
-                Active Processes
-              </h2>
-            </div>
-            <!-- <div class="bpm-homepage-chart">
-              <img src="http://placehold.it/350x350?text=chart">
-            </div> -->
-            <div id="chart2"></div> <!-- replace the image with the chart -->
-            <ul class="list-group card-pf-footer bpm-card-list">
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 1</p></a></li>
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 2</p></a></li>
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 3</p></a></li>
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 4</p></a></li>
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Process 5</p></a></li>
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">All processes...</p></a></li>
-            </ul>
-          </div>
-          <div class="card-pf-footer">
-            <p>
-              <a href="#" class="add" data-toggle="tooltip" data-placement="top" title="" data-original-title="There are currently 4 process types available for you to start"><span class="pficon pficon-add-circle-o"></span>Start a process</a>
-            </p>
-          </div>
-        </div> <!-- card end -->
-      </div> <!-- card column end -->
+        </div>
+      </div>
       <div class="col-sm-3 col-sm-push-3 card-area">
-				<div class="card-pf">
-					<div class="card-pf-body">
-						<div class="card-pf-heading">
-              <h2 class="card-pf-title">
-                Pending Tasks
-              </h2>
+        <div class="card-pf">
+          <div class="card-pf-body blank-card-bpm">
+            <div class="bpm-blank-slate-main-action">
+              <p>
+                <a href="#" class="add" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="There are currently 4 process types available for you to start"><span class="pficon pficon-add-circle-o"></span>&nbsp;&nbsp;Start a Process</a>
+              </p>
             </div>
-            <!-- <div class="bpm-homepage-chart">
-              <img src="http://placehold.it/350x350?text=chart">
-            </div> -->
-            <div id="chart1"></div> <!-- replace the image with the chart -->
-            <ul class="list-group card-pf-footer bpm-card-list">
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Task 1</p></a></li>
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Task 2</p></a></li>
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Task 3</p></a></li>
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">Task 4</p></a></li>
-              <li class="list-group-item"><a href="#"><p class="list-group-item-text">All tasks...</p></a></li>
-            </ul>
+            <!-- <h1>Start a Process</h1> -->
+            <br>
+            <div class="bpm-blank-slate-icon">
+              <span class="fa fa-sitemap"></span>
+            </div>
+            <br>
+            <p>You currently have no active processes. Click "Start a Process" to create a new one.</p>
           </div>
-          <div class="card-pf-footer">
-            <p>
-              <a href="#" class="add" data-toggle="tooltip" data-placement="top" title="" data-original-title="Create a task for a user, role, or group"><span class="pficon pficon-add-circle-o"></span>Create a task</a>
-            </p>
+        </div>
+
+      
+				<div class="card-pf">
+          <div class="card-pf-body blank-card-bpm">
+            <div class="bpm-blank-slate-main-action">
+              <p>
+                <a href="#" class="add" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Create a task for a user, role, or group"><span class="pficon pficon-add-circle-o"></span>&nbsp;&nbsp;Assign a Task</a>
+              </p>
+            </div>
+            <!-- <h1>Start a Process</h1> -->
+            <br>
+            <div class="bpm-blank-slate-icon">
+              <span class="fa fa-check"></span>
+            </div>
+            <br>
+            <p>You currently have no pending tasks. Click "Assign a task" to create and assign a new one.</p>
           </div>
-				</div> <!-- card end -->
+        </div>
 			</div> <!-- card column end -->
 
 			<!-- left-panel -->
