--- a/PF_PROJ/index.html
+++ b/PF_PROJ/index.html
@@ -278,6 +278,11 @@
               <p class="list-group-item-heading">Empty State c</p>
             </a>
           </li>
+          <li href="#" class="list-group-item">
+            <a href="index-KW.html">
+              <p class="list-group-item-heading">Knowledge Worker Homepage</p>
+            </a>
+          </li>
 				</ul>
 			</div>
 
