fixed some margins and font sizes

--- a/PF_PROJ/empty-state-a.html
+++ b/PF_PROJ/empty-state-a.html
@@ -57,12 +57,12 @@
               </p>
             </div>
             <!-- <h1>Start a Process</h1> -->
-            <br>
             <div class="bpm-blank-slate-icon">
               <span class="fa fa-sitemap"></span>
             </div>
-            <br>
-            <p>You currently have no Projects processes. Click "New Project" to create a new one.</p>
+            <div class="bpm-blank-slate-description">
+              <p>You currently have no Projects. Click "New Project" to create a new one.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -75,12 +75,12 @@
               </p>
             </div>
             <!-- <h1>Start a Process</h1> -->
-            <br>
             <div class="bpm-blank-slate-icon">
               <span class="fa fa-sitemap"></span>
             </div>
-            <br>
-            <p>You currently have no active processes. Click "Start a Process" to create a new one.</p>
+            <div class="bpm-blank-slate-description">
+              <p>You currently have no active processes. Click "Start a Process" to create a new one.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -93,12 +93,12 @@
               </p>
             </div>
             <!-- <h1>Start a Process</h1> -->
-            <br>
             <div class="bpm-blank-slate-icon">
               <span class="fa fa-check"></span>
             </div>
-            <br>
-            <p>You currently have no pending tasks. Click "Assign a task" to create and assign a new one.</p>
+            <div class="bpm-blank-slate-description">
+              <p>You currently have no pending tasks. Click "Assign a task" to create and assign a new one.</p>
+            </div>
           </div>
         </div>
 			</div> <!-- card column end -->
@@ -110,20 +110,8 @@
         </div>
 				<ul class="list-group">
 					<li href="#" class="list-group-item">
-							<p class="list-group-item-text">You have no recent assets. To create process flows, business rules, or other assets, go to the <a>Library</a> area.</p>
+							<p class="list-group-item-empty-text">You have no recent assets. To create process flows, business rules, or other assets, go to the <a>Library</a> area.</p>
 					</li>
-					<!-- <li href="#" class="list-group-item">
-						<a href="#">
-							<p class="list-group-item-heading">Process Model</p>
-							<p class="list-group-item-text">Viewed 2 hours ago</p>
-						</a>
-					</li>
-					<li href="#" class="list-group-item">
-						<a href="#">
-							<p class="list-group-item-heading">Applicant Data Model</p>
-							<p class="list-group-item-text">Edited 3 days ago</p>
-						</a>
-					</li> -->
 				</ul>
 			</div>
 		</div>
