--- a/PF_PROJ/empty-state-b.html
+++ b/PF_PROJ/empty-state-b.html
@@ -84,12 +84,12 @@
               </p>
             </div>
             <!-- <h1>Start a Process</h1> -->
-            <br>
             <div class="bpm-blank-slate-icon">
               <span class="fa fa-sitemap"></span>
             </div>
-            <br>
-            <p>You currently have no active processes. Click "Start a Process" to create a new one.</p>
+            <div class="bpm-blank-slate-description">
+              <p>You currently have no active processes. Click "Start a Process" to create a new one.</p>
+            </div>
           </div>
         </div>
 
@@ -102,12 +102,12 @@
               </p>
             </div>
             <!-- <h1>Start a Process</h1> -->
-            <br>
             <div class="bpm-blank-slate-icon">
               <span class="fa fa-check"></span>
             </div>
-            <br>
-            <p>You currently have no pending tasks. Click "Assign a task" to create and assign a new one.</p>
+            <div class="bpm-blank-slate-description">
+              <p>You currently have no pending tasks. Click "Assign a task" to create and assign a new one.</p>
+            </div>
           </div>
         </div>
 			</div> <!-- card column end -->
