--- a/PF_PROJ/empty-state-c.html
+++ b/PF_PROJ/empty-state-c.html
@@ -62,12 +62,12 @@
                 <a href="#" class="add" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Create a new project from scratch or copy a template"><span class="pficon pficon-add-circle-o"></span>&nbsp;&nbsp;New Project</a>
               </p>
             </div>
-            <br>
             <div class="bpm-blank-slate-icon">
               <span class="fa fa-sitemap"></span>
             </div>
-            <br>
-            <p>You currently have no Projects. Click "New Project" to create a new one.</p>
+            <div class="bpm-blank-slate-description">
+              <p>You currently have no Projects. Click "New Project" to create a new one.</p>
+            </div>
           </div>
         </div> <!-- card end -->
       </div> <!-- card column end -->
