significant structural and style changes. sidebar is now on the right, and spans full height of page. selected new icons for project, process, and task

--- a/PF_PROJ/index-KW.html
+++ b/PF_PROJ/index-KW.html
@@ -106,7 +106,7 @@
       <div class="col-sm-12 col-md-6 card-area">
         <div class="card-pf">
           <div class="card-pf-heading">
-            <div class="bpm-numeric-indicators container-fluid">
+            <div class="bpm-numeric-indicators">
               <h5 class="hidden-md">Following:</h5>
               <div class="bpm-numeric-indicator" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="Click to manage your following list.">
                 <a href="#">
