--- a/PF_PROJ/empty-state-a.html
+++ b/PF_PROJ/empty-state-a.html
@@ -206,7 +206,7 @@
           </div>
         </div><!-- end cards row -->
       </div><!-- end card area -->
-      <div class="col-sm-12 col-lg-3 sidebar-pf-right sidebar-bpm"><!-- sidebar left area col-lg-pull-9 --> 
+      <div class="col-sm-12 col-lg-3 sidebar-pf sidebar-pf-right sidebar-bpm"><!-- sidebar left area col-lg-pull-9 --> 
         <div class="sidebar-bpm-heading"><!-- recent assets heading -->
           <h3>Recent Assets</h2>
         </div>
