--- a/PF_PROJ/index.html
+++ b/PF_PROJ/index.html
@@ -49,7 +49,7 @@
     <div class="row"><!-- main container's row (contains sidebar and card area) -->
       <div class="col-sm-8 col-md-9 container-cards-pf"><!-- card area col-lg-push-3-->
         <div class="row row-cards-pf"><!-- cards row -->
-          <div class="col-sm-4">
+          <div class="col-sm-6 col-md-4">
             <div class="card-pf">
               <div class="card-pf-body">
                 <div class="card-pf-heading">
@@ -77,7 +77,7 @@
               </div>
             </div> <!-- card end -->
           </div> <!-- card column end -->
-          <div class="col-sm-4">
+          <div class="col-sm-6 col-md-4">
             <div class="card-pf">
               <div class="card-pf-body">
                 <div class="card-pf-heading">
@@ -104,7 +104,7 @@
               </div>
             </div> <!-- card end -->
           </div> <!-- card column end -->
-          <div class="col-sm-4"><!-- card column -->
+          <div class="col-sm-12 col-md-4"><!-- card column -->
             <div class="card-pf">
               <div class="card-pf-body">
                 <div class="card-pf-heading">
@@ -143,24 +143,26 @@
                       <h4 class="modal-title" id="myModalLabel">Following</h4>
                     </div>
                     <div class="modal-body">
-                      <form class="form-horizontal">
-                        <div class="form-group">
-                          <label class="col-sm-3 control-label" for="textInput-modal-markup">Field One</label>
-                          <div class="col-sm-9">
-                            <input type="text" id="textInput-modal-markup" class="form-control"></div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-3 control-label" for="textInput2-modal-markup">Field Two</label>
-                          <div class="col-sm-9">
-                            <input type="text" id="textInput2-modal-markup" class="form-control"></div>
-                        </div>
-                        <div class="form-group">
-                          <label class="col-sm-3 control-label" for="textInput3-modal-markup">Field Three</label>
-                          <div class="col-sm-9">
-                            <input type="text" id="textInput3-modal-markup" class="form-control">
-                          </div>
-                        </div>
-                      </form>
+                      <ul class="list-group checkbox">
+                        <li class="list-group-item">
+                          <label><input type="checkbox">User 1</label>
+                        </li>
+                        <li class="list-group-item">
+                          <label><input type="checkbox">User 2</label>
+                        </li>
+                        <li class="list-group-item">
+                          <label><input type="checkbox">User 3</label>
+                        </li>
+                        <li class="list-group-item">
+                          <label><input type="checkbox">User 4</label>
+                        </li>
+                        <li class="list-group-item">
+                          <label><input type="checkbox">User 5</label>
+                        </li>
+                        <li class="list-group-item">
+                          <label><input type="checkbox">User 6</label>
+                        </li>
+                      </ul>
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
